# spin-up

./: .clang-format  .gitignore  DESIGN.md  Makefile  README.md
.devcontainer/: Dockerfile  Dockerfile2  devcontainer.json
.github/workflows/: c-cpp.yml
include/: Constants.h  Motor.h  ProsMotor.h  RobotConstant.h  RobotMotor.h  RobotPort.h  motor.h  pros_motor.h  robot_constant.h  robot_motor.h  robot_port.h
include/constant/: constants.h  motor_constants.h
include/constants/: constants.h  motor_constants.h
include/drivetrain/: holonomic_drive.h  holonomic_motors.h
include/hardware/: pros_controller.h  pros_motor.h  pros_motor_group.h
include/interface/: controller.h  encoder.h  holonomic_drivetrain_motors.h  motor.h  omni_drive.h  robot_motors.h
include/robot/: robot_motor.h
install/: local_setup.sh  setup.sh
install/publisher_example/lib/publisher_example/: publisher
install/publisher_example/share/ament_index/resource_index/parent_prefix_path/: publisher_example
install/publisher_example/share/publisher_example/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/publisher_example/share/publisher_example/cmake/: publisher_exampleConfig.cmake
log/: latest_build
pros_include/: main.h
ros1/.devcontainer/: Dockerfile - ros1  devcontainer.json
ros1/src/spin_up/: CMakeLists.txt  package.xml
ros1/src/spin_up/include/: Motor.h  MotorInterface.h  ProsMotor.h
ros1/src/spin_up/old_include/auton/auton_actions/: ConveyorAction.h  MoveLiftToPositionAction.h  UseClawAction.h
ros1/src/spin_up/old_include/nodes/: NodeManager.h
ros1/src/spin_up/old_include/nodes/subsystems/: IClawNode.h  ILiftNode.h
ros1/src/spin_up/old_include/okapi/: api.hpp
ros1/src/spin_up/old_include/okapi/impl/chassis/controller/: chassisControllerBuilder.hpp
ros1/src/spin_up/old_include/pursuit/: IPursuit.h
ros1/src/spin_up/old_include/pursuit/path_pursuit/: IPathPursuit.h
ros1/src/spin_up/old_include/pursuit/pose_pursuit/: IPosePursuit.h
ros1/src/spin_up/old_src/auton/auton_actions/: ConveyorAction.cpp  MoveLiftToPositionAction.cpp  UseClawAction.cpp
ros1/src/spin_up/old_src/nodes/: NodeManager.cpp
ros1/src/spin_up/src/: Motor.cpp  ProsMotor.cpp
ros1/src/v5_hal/: CMakeLists.txt  package.xml
ros1/v5_hal/msg/: RollPitchYaw.msg  V5RotationSensor.msg
ros2/.devcontainer/: Dockerfile - ros2  devcontainer.json
ros2/publisher_example/: package.xml
ros2/src/publisher_example/: CMakeLists.txt
ros2/src/publisher_example/src/: publisher.cpp
scripts/: build.sh  setup.sh  test.sh
src/: ProsMotor.cpp  RobotPort.cpp  main.cpp  pros_motor.cpp  robot_motor.cpp  robot_port.cpp
src/constant/: constants.h  motor_constants.cpp
src/constants/: robot_motor.cpp
src/diffdrive_arduino/: CMakeLists.txt  LICENSE  README.md  package.xml  robot_hardware.xml
src/diffdrive_arduino/controllers/: robot_controller_example.yaml
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  diffdrive_arduino.h  wheel.h
src/diffdrive_arduino/launch/: fake_robot.launch.py  test_robot.launch.py
src/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  wheel.cpp
src/drivetrain/: holonomic_drive.cpp  holonomic_drive.h  holonomic_motors.cpp  holonomic_motors.h
src/factory/: factory.h
src/hardware/: pros_controller.cpp  pros_controller.h  pros_motor.cpp  pros_motor.h  pros_motor_cartridge.cpp  pros_motor_cartridge.h  pros_motor_group.cpp  pros_motor_group.h
src/interface/: controller.h  encoder.h  robot_motors.cpp
src/publisher_example/: CMakeLists.txt  package.xml
src/publisher_example/src/: publisher.cpp
src/robot/: robot_motor.cpp
src/spin-up/: CMakeLists.txt  package.xml
src/spin-up/config/: my_controllers.yaml
src/spin-up/description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/spin-up/launch/: launch_robot.launch.py  rsp.launch.py
src/spin-up/src/: minimal_publisher.cpp  motor_test.cpp
src/spin_up/: CMakeLists.txt  package.xml
src/spin_up/config/: my_controllers.yaml
src/spin_up/description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/spin_up/launch/: launch_robot.launch.py  rsp.launch.py
src/spin_up/src/: minimal_publisher.cpp  motor_test.cpp
src/v5_hal/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
src/v5_hal/msg/: CompetitionStatus.msg  V5Motor.msg
v5_hal/: CMakeLists.txt  package.xml
v5_hal/msg/: V5Battery.msg  V5Controller.msg  V5InertialSensor.msg
