cmake_minimum_required(VERSION 3.5)
project(diffdrive_arduino)

find_package(ament_cmake REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(controller_manager REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(rclcpp REQUIRED)
find_package(pluginlib REQUIRED)
find_package(v5_hal REQUIRED)

add_library(diffdrive_arduino SHARED src/diffdrive_arduino.cpp src/wheel.cpp src/arduino_comms.cpp)

target_include_directories(
  diffdrive_arduino
  PRIVATE
  include
)
ament_target_dependencies(
  diffdrive_arduino
  hardware_interface
  controller_manager
  rclcpp_lifecycle
  rclcpp
  pluginlib
  v5_hal
)

pluginlib_export_plugin_description_file(hardware_interface robot_hardware.xml)

install(
  TARGETS diffdrive_arduino
  DESTINATION lib
)

install(
  DIRECTORY controllers launch/
  DESTINATION share/${PROJECT_NAME}
)

ament_export_libraries(
  diffdrive_arduino
)
ament_export_dependencies(
  hardware_interface
  controller_manager
  rclcpp_lifecycle
  rclcpp
  pluginlib
  v5_hal
)

ament_package()