<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spin-up</name>
  <version>0.0.1</version>
  <description>Spin Up</description>
  <maintainer email="powersd@msoe.edu">dylan-powers</maintainer>
  <maintainer email="brands@msoe.edu">samuel-brands</maintainer>
  <maintainer email="alex.kempen@utdallas.edu">alex-kempen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
